# pipe-utils

./: .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: requirements.txt  requirements_docs.txt
docs/source/: api.rst  conf.py  curry.rst  index.rst  it.rst  it_and_obj.rst  pipe_objects.rst  quickstart.rst
docs/source/_autosummary/: pipe_utils.iterables.rst  pipe_utils.mappings.rst  pipe_utils.override.rst  pipe_utils.pipe.rst  pipe_utils.rst  pipe_utils.utils.rst  pipe_utils.values.rst
docs/source/exts/: curry_autodoc.py
src/pipe_utils/: __init__.py  _types.py  curry.py  iterables.py  mappings.py  override.py  pipe.py  utils.py  values.py
tests/: pytest.ini  test_curry.py  test_it.py  test_iterables.py  test_mappings.py  test_override.py  test_pipe.py  test_values.py
